--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   cupertino_icons: ^0.1.2
   tel_input: ^0.2.2
   masked_text: ^0.0.6
+  shared_preferences: ^0.5.3+2
 
 dev_dependencies:
   flutter_test:
