--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
   tel_input: ^0.2.2
   masked_text: ^0.0.6
   shared_preferences: ^0.5.3+2
+  progress_dialog: ^1.1.0+1
 
 dev_dependencies:
   flutter_test:
