--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   masked_text: ^0.0.6
   shared_preferences: ^0.5.3+2
   progress_dialog: ^1.1.0+1
+  flutter_sms: ^1.0.1
 
 dev_dependencies:
   flutter_test:
