--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   shared_preferences: ^0.5.3+2
   progress_dialog: ^1.1.0+1
   flutter_sms: ^1.0.1
+  flutter_progress_button: '^0.6.4'
 
 dev_dependencies:
   flutter_test:
