*update App's name

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
     package="com.example.sms_alarm_flutter">
 
     <uses-permission android:name="android.permission.SEND_SMS"/>
+	<uses-permission android:name="android.permission.INTERNET"/>
 
     <!-- io.flutter.app.FlutterApplication is an android.app.Application that
          calls FlutterMain.startInitialization(this); in its onCreate method.
@@ -10,7 +11,7 @@
          FlutterApplication and put your custom class here. -->
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="sms_alarm_flutter"
+        android:label="Home Alarm"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
