--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,8 +27,8 @@ dependencies:
   masked_text: ^0.0.6
   shared_preferences: ^0.5.3+2
   progress_dialog: ^1.1.0+1
-  flutter_sms: ^1.0.1
   flutter_progress_button: '^0.6.4'
+  permission_handler: '^3.2.0'
 
 dev_dependencies:
   flutter_test:
