--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,7 +28,9 @@ dependencies:
   shared_preferences: ^0.5.3+2
   progress_dialog: ^1.1.0+1
   flutter_progress_button: '^0.6.4'
-  permission_handler: '^3.2.0'
+  sms_maintained:
+    git:
+        url: https://github.com/LuisRGameloft/flutter_sms.git
 
 dev_dependencies:
   flutter_test:
